--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>  
   <body>
-    <h1>Gate Meter Classification</h1>
+    <h1>Gate Meter Classification V2</h1>
     
     <section id="demos" class="invisible">
 
